# finally

./: .dockerignore  .env.example  CLAUDE.md  Dockerfile  LICENSE  README.md  market_data_demo.py
.claude/: gsd-file-manifest.json  gsd-install-state.json  settings.json
.claude-plugin/: marketplace.json
.claude/agents/: change-reviewer.md  codex-reviewer.md  gsd-ai-researcher.md  gsd-debugger.md  gsd-domain-researcher.md  gsd-eval-auditor.md  gsd-eval-planner.md  gsd-executor.md  gsd-framework-selector.md  gsd-phase-researcher.md  gsd-plan-checker.md  gsd-planner.md  gsd-research-synthesizer.md  gsd-roadmapper.md  gsd-ui-researcher.md  gsd-user-profiler.md  gsd-verifier.md  reviewer.md
backend/: conftest.py  main.py  market_data_demo.py  pyproject.toml
backend/api/: chat.py  deps.py  portfolio.py  services.py  stream.py  watchlist.py
backend/db/: __init__.py  connection.py  queries.py
backend/llm/: __init__.py  client.py  prompt.py  schema.py
backend/market/: __init__.py  base.py  cache.py  factory.py  massive.py  simulator.py
backend/tests/: conftest.py  test_api.py  test_base.py  test_cache.py  test_db.py  test_factory.py  test_llm.py  test_massive.py  test_simulator.py
db/: finally.db
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
planning/: MARKET_DATA_DESIGN.md  MARKET_DATA_REVIEW.md  PLAN.md  REVIEW.md  SUMMARY.md
scripts/: start_mac.sh  start_windows.ps1  stop_mac.sh  stop_windows.ps1
test/: docker-compose.test.yml  package-lock.json  package.json  playwright.config.ts
(+119 files in other folders)
