[project]
name = "finally-backend"
version = "0.1.0"
description = "FinAlly backend — FastAPI app, market data, and LLM integration"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26",
    "requests>=2.31",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["market"]
