[project]
name = "finally-backend"
version = "0.1.0"
description = "FinAlly backend — FastAPI app, market data, and LLM integration"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.138.1",
    "httpx>=0.28.1",
    "litellm>=1.90.0",
    "numpy>=1.26",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "requests>=2.31",
    "sse-starlette>=3.4.5",
    "uvicorn[standard]>=0.49.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["market", "db", "llm", "api"]
